--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -16,9 +16,9 @@ main:
   #- name: News
   #  url: /#news
   #  weight: 13
-  - name: CV
-    url: experience/
-    weight: 20
+  # - name: CV
+   # url: experience/
+   # weight: 20
   #- name: Projects
    # url: projects/
    # weight: 30
